--- a/src/components/sections/Contact.module.css
+++ b/src/components/sections/Contact.module.css
@@ -10,10 +10,8 @@
 }
 
 .title {
-  font-size: 28px;
   padding: 10px;
   margin-bottom: 30px;
-  font-weight: bold;
 }
 
 .form {
