--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -26,7 +26,7 @@
 }
 
 .title {
-  display: inline-block;
+  white-space: nowrap;
 }
 
 .line_left,
@@ -80,7 +80,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 400px) {
   .line_left {
     display: none;
   }
